--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-FUTURE
    - Made transcoded streams more standards compliant by not sending a random
        value as the Content-Length or claiming that ranged requests are
        supported
    - Changed rating semantics to distinguish between user ratings and the
        global average and add the ability to search for unrated items
        (< 1 star)
    - Updated Prototype to git HEAD (4ce0b0f)
    - Fixed bug that disclosed passwords for plugins to users that didn't
        have access to update the password (patch by Fred Thomsen)
    - Fixed streaming on Android devices and anything else that expects to
        be able to pass a playlist URL to an application and have it work
    - Removed the SHOUTcast localplay controller

--------------------------------------------------------------------------
  v.3.6-Alpha4 2012-11-27
    - Removed lyric support, which was broken and ugly
    - Removed tight coupling to the PHP mysql extension
    - Fixed an issue with adding catalogs on Windows caused by inconsistent 
        behaviour of is_readable() (reported by Lockzi)

--------------------------------------------------------------------------
  v.3.6-Alpha3 2012-10-15
    - Updated getID3 to 1.9.4b1
    - Removed support for extremely old passwords
    - Playlists imported from M3U now retain their ordering
        (patch by Florent Fourcot)
    - Removed HTML entity encoding of plaintext email (reported by USMC Guy)
    - Fixed a search issue which prevented the use of multiple tag rules
        (reported by Istarion)
    - Fixed ASF tag parsing regression (reported by cygn)

--------------------------------------------------------------------------