@@ -71,7 +71,7 @@ if ($link) {
 
 /** This is the version.... fluf nothing more... **/
 $results['version']		= '3.6-Alpha4-DEV';
-$results['int_config_version']	= '11';
+$results['int_config_version']	= '12';
 
 if ($results['force_ssl']) {
 	$http_type = 'https://';
