@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.6-FUTURE
+    - Made transcoding and its configuration more flexible
     - Made transcoded streams more standards compliant by not sending a random
         value as the Content-Length or claiming that ranged requests are
         supported
